--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DicodingMadeClass</string>
+    <string name="app_name">MyNotesApp</string>
     <string name="file_new">File New</string>
     <string name="file_open">File Open</string>
     <string name="file_save">File Save</string>
